--- a/.github/workflows/build-openwrt.yml
+++ b/.github/workflows/build-openwrt.yml
@@ -48,7 +48,7 @@ jobs:
 
     - name: Clone source code
       env: 
-        REPO_URL: https://github.com/Lienol/openwrt/tree/master
+        REPO_URL: https://github.com/Lienol/openwrt
         REPO_BRANCH: my-19.07-full
       run: git clone --depth 1 $REPO_URL -b $REPO_BRANCH openwrt
 
